[tool.poetry]
name = "steg"
version = "0.1.0"
description = "Stegsolve like GUI program for steganographic purposes."
authors = ["Aquib <aquibjavedt007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.6.0.66"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
